[tool.poetry]
name = "algorithms"
version = "0.1.0"
description = "Algorithms and data structures"
authors = ["Quentin Fortier <qpfortier@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^6.2.3"

[tool.poetry.dev-dependencies]
yapf = "^0.31.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
